[project]
name = "PyNetIM"
version = "0.1.0"
authors = [
  { name = "Kaijing Zhang", email = "zhkaij@foxmail.com" },
]
description = "A Python library for Network Influence Maximization"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "networkx"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = { text = "MIT" }

[project.urls]
Homepage = "https://github.com/zzzkhj/PyNetIM"
Repository = "https://github.com/zzzkhj/PyNetIM"
Issues = "https://github.com/zzzkhj/PyNetIM/issues"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"