[build-system]
requires = ["setuptools>=61.0", "wheel", "pybind11>=2.10"]
build-backend = "setuptools.build_meta"

[project]
name = "pynetim"
version = "0.5.3"
authors = [{ name = "Kaijing Zhang", email = "zhkaij@foxmail.com" }]
description = "A Python library for Network Influence Maximization"
readme = "README.md"
requires-python = ">=3.8"
dependencies = ["networkx>=2.6", "numpy>=1.20", "tqdm>=4.60"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
license = { text = "MIT" }

[project.urls]
Homepage = "https://github.com/zzzkhj/PyNetIM"
Repository = "https://github.com/zzzkhj/PyNetIM"
Issues = "https://github.com/zzzkhj/PyNetIM/issues"

[project.optional-dependencies]
deep-learning = [
    "torch>=1.10",
    "torch-geometric>=2.0",
    "torch-scatter>=2.0",
]
all = [
    "pynetim[deep-learning]",
]